# speechwire-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/speechwire_mcp/: __init__.py  __main__.py  client.py  parsing_helpers.py  server.py
src/speechwire_mcp/judges/: __init__.py  client.py  parsers.py
src/speechwire_mcp/login/: __init__.py  client.py  parsers.py
src/speechwire_mcp/results/: __init__.py  client.py  parsers.py
src/speechwire_mcp/rooms/: __init__.py  client.py  parsers.py
src/speechwire_mcp/schematics/: __init__.py  client.py  parsers.py
src/speechwire_mcp/structure/: __init__.py  client.py  parsers.py
src/speechwire_mcp/teams/: __init__.py  client.py  parsers.py
tests/: fake_data.py  test_add_judge.py  test_client_state.py  test_login_parsers.py  test_parsers.py  test_post.py  test_results_parsers.py  test_rooms_parsers.py  test_schematics_parsers.py  test_session_expiry.py  test_structure_parsers.py  test_teams_parsers.py  test_update_judge.py
